@@ -227,8 +227,8 @@ peak.tests.MailModel  = importString('peak.storage.tests:xmi')
 
 
 
-
-
+[peak.running]
+signalManager = None    # default is no special handling
 
 
 
